<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.easjvoodoo.myapplication.LoginAcitivty">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/user_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edit_username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botton_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
